# QualificationMatrix

./: .gitignore  CMakeLists.txt  README.md  clang-format  icons.qrc  qm_res.rc
.github/workflows/: cmake-single-platform.yml  ubuntu-latest.yml
cmake_modules/: FindBotan.cmake
database/: new.sql  sql_0_0.sql  sql_1_0.sql  sql_1_1.sql  sql_1_2.sql  sql_1_3.sql  sql_1_4.sql  sql_1_5.sql  sql_1_6.sql  sql_1_7.sql  sql_1_8.sql  sql_1_9.sql  sql_base.sql
rcs/: icons.qrc  qm_res.rc
src/: config.h  main.cpp  qmmainwindow.cpp  qmmainwindow.h
src/ams/: qmamsgroupsettingswidget.cpp  qmamsgroupsettingswidget.h  qmamslogindialog.cpp  qmamslogindialog.h  qmamsloginwidget.cpp  qmamsloginwidget.h  qmamsmanager.cpp  qmamsmanager.h  qmamspassworddialog.cpp  qmamspassworddialog.h  qmamssettingswidget.cpp  qmamssettingswidget.h  qmamsusersettingswidget.cpp  qmamsusersettingswidget.h
src/appcache/: appcache.cpp  appcache.h  appcacheconfig.cpp  appcacheconfig.h  appcacheconfigjson.cpp  appcacheconfigjson.h  applicationcache.cpp  applicationcache.h  qmappcachemanager.cpp  qmappcachemanager.h  qmappcachesettingswidget.cpp  qmappcachesettingswidget.h
src/backup/: qmbackupmanager.cpp  qmbackupmanager.h
src/certificate/: qmcertificatedialog.cpp  qmcertificatedialog.h  qmcertificateintegritycheckdialog.cpp  qmcertificateintegritycheckdialog.h  qmemployeedateentry.h  qmemployeedatemodel.cpp  qmemployeedatemodel.h  qmnewcertificatedialog.cpp  qmnewcertificatedialog.h
src/data/: qmdatamanager.cpp  qmdatamanager.h  qminfomodel.cpp  qminfomodel.h  qmmodelfactory.cpp  qmmodelfactory.h
src/database/: qmdatabasedialog.cpp  qmdatabasedialog.h  qmdatabasemanager.cpp  qmdatabasemanager.h  qmdatabaseupdatedialog.cpp  qmdatabaseupdatedialog.h  qmdatabaseupdater.cpp  qmdatabaseupdater.h
src/delegate/: checkboxdelegate.cpp  checkboxdelegate.h  colorchooserdelegate.cpp  colorchooserdelegate.h  proxysqlrelationaldelegate.cpp  proxysqlrelationaldelegate.h  qmbooleandelegate.cpp  qmbooleandelegate.h  qmcheckboxdelegate.cpp  qmcheckboxdelegate.h  qmcolorchooserdelegate.h
src/favorites/: qmfavoritedatabasedialog.cpp  qmfavoritedatabasedialog.h  qmfavoritemodel.cpp  qmfavoritemodel.h
src/file/: qmfiledialog.cpp  qmfiledialog.h
src/framework/: qmbooleandelegate.h  qmcolorchooserdelegate.cpp  qmcolorchooserdelegate.h  qmdatedelegate.cpp  qmdatedelegate.h  qmdialog.cpp  qmdialog.h  qmextendedselectiondialog.cpp  qmextendedselectiondialog.h  qminfolabel.cpp  qminfolabel.h  qmlistvalidator.cpp  qmlistvalidator.h  qmplaintexteditdelegate.cpp  qmplaintexteditdelegate.h  qmproxysqlrelationaldelegate.cpp  qmproxysqlrelationaldelegate.h  qmsqlrelationaltablemodel.cpp  qmsqlrelationaltablemodel.h  qmsqltablemodel.cpp  qmsqltablemodel.h  qmtreesettingsdelegate.cpp  qmtreesettingsdelegate.h  qmwinmodewidget.h
src/general/: qmmainwindow.cpp  qmmainwindow.h  qmprogresslogdialog.cpp  qmprogresslogdialog.h
src/model/: employeefunctionmodel.cpp  employeefunctionmodel.h  employeemodel.cpp  employeemodel.h  functiongroupmodel.cpp  functiongroupmodel.h  functionmodel.cpp  functionmodel.h  infomodel.cpp  infomodel.h  qmcertificatemodel.cpp  qmcertificatemodel.h  qmdatamanager.cpp  qmdatamanager.h  qmemployeefunctionmodel.cpp  qmemployeefunctionmodel.h  qmemployeefunctionviewmodel.cpp  qmemployeefunctionviewmodel.h  qmemployeemodel.cpp  qmemployeemodel.h  qmemployeeviewmodel.cpp  qmemployeeviewmodel.h  qmfunctiongroupmodel.cpp  qmfunctiongroupmodel.h  qmfunctiongroupviewmodel.cpp  qmfunctiongroupviewmodel.h  qmfunctionmodel.cpp  qmfunctionmodel.h  qmfunctionviewmodel.cpp  qmfunctionviewmodel.h  qminfomodel.cpp  qminfomodel.h  qmqualificationmatrixmodel.cpp  qmqualificationmatrixmodel.h  qmqualificationmatrixviewmodel.cpp  qmqualificationmatrixviewmodel.h  qmshiftviewmodel.cpp  qmshiftviewmodel.h  qmsqlrelationaltablemodel.cpp  qmsqlrelationaltablemodel.h  (+36 more)
src/qualimatrix/: qmqualimatrixdelegate.cpp  qmqualimatrixdelegate.h  qmqualimatrixheaderview.cpp  qmqualimatrixheaderview.h  qmqualimatrixmodel.cpp  qmqualimatrixmodel.h  qmqualimatrixwidget.cpp  qmqualimatrixwidget.h  qmtableview.cpp  qmtableview.h
src/qualiresult/: qmqualiresultmodel.cpp  qmqualiresultmodel.h  qmqualiresultrecord.cpp  qmqualiresultrecord.h  qmqualiresultwidget.cpp  qmqualiresultwidget.h  qualiresultmodel.cpp  qualiresultmodel.h  qualiresultrecord.cpp  qualiresultrecord.h  qualiresultwidget.cpp  qualiresultwidget.h
src/qualiresultreport/: qmqualiresultreportdialog.cpp  qmqualiresultreportdialog.h  qmqualiresultreportdocument.cpp  qmqualiresultreportdocument.h  qmqualiresultreportitem.cpp  qmqualiresultreportitem.h
src/settings/: qmapplicationsettings.cpp  qmapplicationsettings.h  qmdatabasesettings.cpp  qmdatabasesettings.h  qmemployeedetailsdialog.cpp  qmemployeedetailsdialog.h  qmemployeesettingswidget.cpp  qmemployeesettingswidget.h  qmfuncsettingswidget.cpp  qmfuncsettingswidget.h  qmgeneralsettingswidget.cpp  qmgeneralsettingswidget.h  qmsettings.cpp  (+11 more)
trans/: qm_de.ts  qm_en.ts
translations/: qm_de.ts  qm_en.ts
ui/: importcsvdialog.ui  qmaddmultipletraindatadialog.ui  qmamsgroupsettingswidget.ui  qmamslogindialog.ui  qmamsloginwidget.ui  qmamspassworddialog.ui  qmamssettingswidget.ui  qmamsuserdetailsdialog.ui  qmamsusersettingswidget.ui  qmappcachesettingswidget.ui  qmcertificatedialog.ui  qmcertificateintegritycheckdialog.ui  qmdatabasedialog.ui  qmdatabaseupdatedialog.ui  qmemployeedetailsdialog.ui  qmemployeesettingswidget.ui  qmextendedselectiondialog.ui  qmfavoritedatabasedialog.ui  qmfiledialog.ui  qmfuncsettingswidget.ui  qmgeneralsettingswidget.ui  qmimportcsvdialog.ui  qmmainwindow.ui  qmnewcertificatedialog.ui  qmprogresslogdialog.ui  qmqualimatrixsettingswidget.ui  qmqualimatrixwidget.ui  qmqualiresultreportdialog.ui  qmqualiresultsettingswidget.ui  qmqualiresultwidget.ui  qmselectfromlistdialog.ui  qmsettingsdialog.ui  qmsigninglistdialog.ui  qmtraindataconflictdialog.ui  qmtraindatadetails.ui  qmtraindatadetailsdialog.ui  qmtraindatadialog.ui  qmtraindatawidget.ui  qmtrainsettingswidget.ui  qualiresultwidget.ui  (+2 more)
(+106 files in other folders)
